WIP: Add PipelineTask.PipelineSpec.Metadata
